# i3dr_rtabmap-ros

./: CMakeLists.txt  package.xml
.github/workflows/: ros-build.yml
config/: test_mapping_deimos.rviz  test_mapping_i3dr_phobos.rviz  test_mapping_i3dr_titania.rviz  test_mapping_phobos.rviz  test_mapping_phobos_nuclear.rviz
launch/: deimos_opensource_tracking.launch  i3dr_camera_slam.launch  rtabmap_custom.launch  ss_mapping.launch  ss_stereo.launch  standalone_rtabmap.launch  stereo_localisation.launch
src/: i3dr_rtabmap_transfer.py
