<?xml version="1.0"?>
<package format="2">
  <name>i3dr_rtabmap</name>
  <version>0.0.0</version>
  <description>Group of launchers for using RTABMAP with deimos cameras</description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtabmap_ros</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>rtabmap</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>octomap_rviz_plugins</exec_depend>
  <exec_depend>robot_localization</exec_depend>

</package>
